[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/mapa_dcc.png" type="Texture" id=1]
[ext_resource path="res://scripts/Map.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 60, 70 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 100, 100 )

[node name="Map" type="Node2D"]
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Dcc" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Dcc"]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="AreaEntrada" type="Area2D" parent="Dcc"]
position = Vector2( 440, 408 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dcc/AreaEntrada"]
shape = SubResource( 1 )

[node name="AreaSalita" type="Area2D" parent="Dcc"]
position = Vector2( 264, 832 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dcc/AreaSalita"]
shape = SubResource( 2 )

[node name="AreaPicarte" type="Area2D" parent="Dcc"]
position = Vector2( 440, 120 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dcc/AreaPicarte"]
shape = SubResource( 3 )
